--- a/client/src/components/Hero/index.css
+++ b/client/src/components/Hero/index.css
@@ -1,9 +1,10 @@
 .App .Hero .img-responsive {
-  float: left;
-  max-height: 70vh;
+  margin: auto;
+  max-height: 60vh;
 }
 
 .Hero .jumbotron {
+  background-color: #a9e7d9;
   margin: 0;
   padding: 0;
 }
@@ -13,6 +14,7 @@
 }
 
 .hero-text {
+  color: #128a6f;
   display: flex;
   flex-direction: column;
   justify-content: center;
