--- a/client/src/components/TopNavbar/index.css
+++ b/client/src/components/TopNavbar/index.css
@@ -4,3 +4,17 @@
   border: none;
   z-index: 2;
 }
+
+#eff-that-nav li {
+  background-color: #a9e7d9;
+  font-size: 1.3em;
+  margin: 2px 1px;
+}
+
+#eff-that-nav li:hover {
+  background-color: #128a6f;
+}
+
+#eff-that-nav a {
+  padding: 15px 30px;
+}
