--- a/client/src/components/MainPage/Hero/index.css
+++ b/client/src/components/MainPage/Hero/index.css
@@ -1,5 +1,6 @@
 .App #Hero .img-responsive {
   margin: auto;
+  max-width: 100%;
   height: 60vh;
 }
 
@@ -11,6 +12,8 @@
 
 .hero-row {
   display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
 }
 
 .hero-text {
