--- a/client/src/components/MainPage/DisplaySection/EntitiesDisplay/Entity/index.css
+++ b/client/src/components/MainPage/DisplaySection/EntitiesDisplay/Entity/index.css
@@ -3,8 +3,10 @@
   border-radius: 50%;
   box-shadow: -3px 4px 1px;
   display: inline-block;
+  height: 150px;
   overflow: hidden;
-  margin: 5px
+  margin: 5px;
+  width:150px;
 }
 
 .Entity img {
